--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
-    "nodemon": "^3.1.10",
-    "xss-clean": "^0.1.4"
+    "nodemon": "^3.1.10"
   }
 }
